Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-11320

[C++] Spurious test failure when creating temporary dir

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • None
    • 4.0.0
    • C++

    Description

      When running the release verification script, I sometimes get this error:

      [----------] 5 tests from TestInt8/TestSparseTensorRoundTrip/0, where TypeParam = arrow::Int8Type
      [ RUN      ] TestInt8/TestSparseTensorRoundTrip/0.WithSparseCOOIndexRowMajor
      /tmp/arrow-3.0.0.4SRpe/apache-arrow-3.0.0/cpp/src/arrow/ipc/tensor_test.cc:53: Failure
      Failed
      '_error_or_value8.status()' failed with IOError: Path already exists: '/tmp/ipc-test-qj6ng827/'
      [  FAILED  ] TestInt8/TestSparseTensorRoundTrip/0.WithSparseCOOIndexRowMajor, where TypeParam = arrow::Int8Type (0 ms)
      [ RUN      ] TestInt8/TestSparseTensorRoundTrip/0.WithSparseCOOIndexColumnMajor
      [       OK ] TestInt8/TestSparseTensorRoundTrip/0.WithSparseCOOIndexColumnMajor (0 ms)
      [ RUN      ] TestInt8/TestSparseTensorRoundTrip/0.WithSparseCSRIndex
      [       OK ] TestInt8/TestSparseTensorRoundTrip/0.WithSparseCSRIndex (0 ms)
      [ RUN      ] TestInt8/TestSparseTensorRoundTrip/0.WithSparseCSCIndex
      [       OK ] TestInt8/TestSparseTensorRoundTrip/0.WithSparseCSCIndex (0 ms)
      [ RUN      ] TestInt8/TestSparseTensorRoundTrip/0.WithSparseCSFIndex
      [       OK ] TestInt8/TestSparseTensorRoundTrip/0.WithSparseCSFIndex (1 ms)
      [----------] 5 tests from TestInt8/TestSparseTensorRoundTrip/0 (1 ms total)
      

      It seems that in some fringe cases, the random generation of temporary directory names produces duplicates. Most likely this means the random generator is getting the same seed from different processes.

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 2.5h
                  2.5h