ARROW-11320: [C++] Try to strengthen temporary dir creation

* Make the random generator seed a bit more unique.
* When a temporary name already exists, retry with another one instead of bailing out.

Closes #9265 from pitrou/ARROW-11320-temp-dir-retry

Authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: Antoine Pitrou <antoine@python.org>